fix: fix color contrast of headings

--- a/src/containers/DetailedRestaurant/style.scss
+++ b/src/containers/DetailedRestaurant/style.scss
@@ -27,7 +27,7 @@
   }
 
   &__title {
-    color: $gray-light;
+    color: $gray-lighter;
     font-size: 4rem;
 
     position: relative;
@@ -38,7 +38,7 @@
   }
 
   &__info {
-    color: $gray-light;
+    color: $gray-lighter;
     font-size: 2rem;
 
     position: relative;
@@ -46,7 +46,7 @@
     z-index: 1;
 
     a {
-      color: $gray-light;
+      color: $gray-lighter;
     }
   }
 
